--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "<=12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^17.0.0",
+    "babel-plugin-macros": "^3.1.0",
     "gooey-react": "^1.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.18.0"
   }
 }
