--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "portfolio_2.0",
   "version": "0.1.0",
+  "homepage": "https://laura-jmr.github.io/portfolio_2.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "<=12.1.5",
     "@testing-library/user-event": "^13.5.0",
@@ -12,9 +16,12 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-scripts": "^4.0.0",
+    "react-scroll-parallax": "^3.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "react-router-dom": "^6.18.0"
   }
 }
