--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "^17.0.0",
     "babel-plugin-macros": "^3.1.0",
     "gooey-react": "^1.1.0",
+    "i18next": "^23.7.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-i18next": "^13.5.0",
     "react-scripts": "^4.0.0",
     "react-scroll-parallax": "^3.4.3",
     "web-vitals": "^2.1.4"
